<resources>
    <string name="percentage">%1$d%%</string>
    <string name="question">Question %1$d</string>
    <string name="share">Hey I\'m building my confidence with PERTPractice! I got a %1$d</string>
    <string name="topic_results_description_excellent">Excellent! Awesome Job getting %1$d%% correct. It seems you have mastered this topic.</string>
    <string name="topic_results_description_perfect">Excellent! Awesome Job getting %1$d%% correct. You should be proud of yourself.</string>
    <string name="topic_results_description_average">Not Bad! You got %1$d%% correct. Your on your way to mastering this topic. Try again!</string>
    <string name="topic_results_description_below_average">Don\'t Worry! You got %1$d%% correct. Keep working and try again!</string>
    <string name="topic_results_description_incomplete">Some questions are unanswered. Please tap on any unanswered question to finish.</string>
    <string name="overall_results_description_complete">Welcome to the overall results page! Great Job on completing all the content. Tap on any topic to see a detail view of your results.</string>
    <string name="overall_results_description_incomplete">Welcome to the overall results page! Tap on any topic to either start or resume.</string>
    <string name="t1_example_question01_txt1">Step 1 Distribute the 1 in front of the parenthesis:</string>
    <string name="t1_example_question01_txt2">c &#43; 4 &#45; 3c &#45; 2 &#61; 0</string>
    <string name="t1_example_question01_txt4">c &#45; 3c &#43; 4 &#45; 2 &#61; 0</string>
    <string name="t1_example_question01_txt5">2c &#45; 2 &#61; 0</string>
    <string name="t1_example_question01_txt10">&#45;2c&#47;&#45;2 &#61; 2&#47;&#45;2</string>
    <string name="t1_example_question01_txt9">Step 4 apply division property of equality and divide by -2 to both sides:</string>
    <string name="t1_example_question01_txt11">c &#61; &#45;1</string>
    <string name="t1_example_question01_txt3">Step 2 combine like terms:</string>
    <string name="t1_example_question01_txt6">Step 3 apply addition property of equality by adding 2 to both sides:</string>
    <string name="t1_example_question01_txt8">2c &#45; 2 &#43; 2 &#61; 0 &#43; 2</string>
    <string name="t1_example_question02_txt1">Step 1: Find the values of a, b, c in ax²&#43;bx&#43;c:</string>
    <string name="t1_example_question02_txt2">x²&#45;6x&#43;5&#61;0 </string>
    <string name="t1_example_question02_txt3">A&#61;1, B&#61;&#45;6, C&#61;5</string>
    <string name="t1_example_question02_txt4">Step 2: Since A &#61; 1, Find the factors of C that have a sum that equals to B:</string>
    <string name="t1_example_question02_txt5">1 &#43; 5 &#61; 6  </string>
    <string name="t1_example_question02_txt6">6 is not equal to &#45;6  </string>
    <string name="t1_example_question02_txt7">&#45;1 &#43; &#45;5 &#61; &#45;6  </string>
    <string name="t1_example_question02_txt8">&#45;6 is equal to &#45;6  </string>
    <string name="t1_example_question02_txt9">So, the factors of C that have a sum of B are &#45;1 and &#45;5. </string>
    <string name="t1_example_question02_txt10">Step 3: Use the factors to factor out the quadratic equation: </string>
    <string name="t1_example_question02_txt11">&#40;x&#45;1&#41;&#40;x&#45;5&#41;&#61;0  </string>
    <string name="t1_example_question02_txt12">Step 4: Now make each factor equal to zero and solve for x on each:</string>
    <string name="t1_example_question02_txt13">x &#45; 1 &#61; 0 and x &#45; 5 &#61; 0 </string>
    <string name="t1_example_question02_txt14">x &#45; 1 &#43; 1 &#61; 0 &#43; 1 and x &#45; 5 &#43; 5 &#61; 0 &#43; 5</string>
    <string name="t1_example_question02_txt15">x &#61; 1  and x &#61; 5</string>
    <string name="t1_example_question03_txt1">Step 1 Multiply and apply the Product rule for exponents: </string>
    <string name="t1_example_question03_txt2">(3&#185;a&#185;b&#185;)(&#45;5&#185;a&#185;b&#185;)</string>
    <string name="t1_example_question03_txt3">3 &#42; &#45;5 &#42; a &#185;&#43;&#185; &#42; b &#185;&#43;&#185;</string>
    <string name="t1_example_question03_txt4">&#45;15a²b²</string>
    <string name="t1_example_question04_txt1">Step 1: Find the values of a, b, c in ax²&#43;bx&#43;c:</string>
    <string name="t1_example_question04_txt2">x²&#45;x&#45;6 </string>
    <string name="t1_example_question04_txt3">A&#61;1, B&#61;&#45;1, C&#61;&#45;6</string>
    <string name="t1_example_question04_txt4">Step 2: Since A &#61; 1, Find the factors of C that have a sum that equals to B:</string>
    <string name="t1_example_question04_txt5">&#45;1 &#43; 6 &#61; 5  </string>
    <string name="t1_example_question04_txt6">5 is not equal to &#45;1  </string>
    <string name="t1_example_question04_txt7">1 &#43; &#45;6 &#61; &#45;5  </string>
    <string name="t1_example_question04_txt8">&#45;5 is not equal to &#45;1  </string>
    <string name="t1_example_question04_txt9">2 &#43; &#45;3 &#61; &#45;1  </string>
    <string name="t1_example_question04_txt10">&#45;1 is equal to &#45;1  </string>
    <string name="t1_example_question04_txt11">So, the factors of C that have a sum of B are 2 and &#45;3. </string>
    <string name="t1_example_question04_txt12">Step 3: Use the factors to factor out the quadratic expression: </string>
    <string name="t1_example_question04_txt13">&#40;x&#43;2&#41;&#40;x&#45;3&#41;</string>
    <string name="t1_example_question05_txt1">Step 1: Apply the order of operations. Do parenthesis first then exponents.</string>
    <string name="t1_example_question05_txt2">&#40;8 &#45; 5&#41;&#47;2³ </string>
    <string name="t1_example_question05_txt3">3&#47;2³</string>
    <string name="t1_example_question05_txt4">3&#47;8</string>
    <string name="t1_example_question05_txt5">Step 2: Simplify if possible.</string>
    <string name="t1_example_question05_txt6">3&#47;8 is already simplify so leave expression “as is”. Done.  </string>
    <string name="t1_example_question06_txt1">Step 1: Substitute the values into the expression:</string>
    <string name="t1_example_question06_txt2">06 &#42; 1&#47;2 &#42; (&#45;1² &#42; 2) </string>
    <string name="t1_example_question06_txt3">Step 2: Apply the order of operations: </string>
    <string name="t1_example_question06_txt4">parenthesis then exponents </string>
    <string name="t1_example_question06_txt5"> 06 &#42; 1&#47;2 &#42; (1 &#42; 2)</string>
    <string name="t1_example_question06_txt6">06 &#42; 1&#47;2 &#42; (2) </string>
    <string name="t1_example_question06_txt7">Multiply from left to right </string>
    <string name="t1_example_question06_txt8">3 &#42; 2 </string>
    <string name="t1_example_question06_txt9">6</string>
    <string name="t2_example_question01_txt1">Step 1: Apply order of operations and add 6 and 7 inside the parenthesis:</string>
    <string name="t3_example_question03_txt1">Step 1: Apply inverse operations and add 2x to both sides:</string>
    <string name="t3_example_question03_txt2">-2x + 2x + 7 = -35 + 5x + 2x</string>
    <string name="t3_example_question03_txt3">7 = -35 + 7x</string>
    <string name="t3_example_question03_txt4">Step 2: Apply inverse operations and add 35 to both sides:</string>
    <string name="t3_example_question03_txt5">7 + 35 = -35 + 35 + 7x</string>
    <string name="t3_example_question03_txt6">42 = 7x</string>
    <string name="t3_example_question03_txt7">Step 3: Apply inverse operations and divide 7 to both sides</string>
    <string name="t3_example_question03_txt8">42/7 = 7x/7</string>
    <string name="t3_example_question03_txt9">6 = x</string>
    <string name="t3_example_question03_txt10">Step 4: Apply symmetric property of equality(optional)</string>
    <string name="t3_example_question03_txt11">x = 6</string>
    <string name="t4_example_question01_txt1">Step 1: Find the values of a, b, c in x\u00B2 – 29x + 100:</string>
    <string name="t4_example_question01_txt2">x\u00B2 – 29x + 100</string>
    <string name="t4_example_question01_txt3">A = 1, B = -29, C = 100</string>
    <string name="t4_example_question01_txt4">Step 2: Since A = 1, Find the factors of C that have a sum that equals to B:</string>
    <string name="t4_example_question01_txt5">1 + 100 = 101</string>
    <string name="t4_example_question01_txt6">101 not equal to -29</string>
    <string name="t4_example_question01_txt7">-1 + -100 = -101</string>
    <string name="t4_example_question01_txt8">-101 not equal to -29</string>
    <string name="t4_example_question01_txt9">5 + 25 = 30</string>
    <string name="t4_example_question01_txt10">-4 + -25 = -29</string>
    <string name="t4_example_question01_txt11">-29 is equal to -29</string>
    <string name="t4_example_question01_txt12">So, the factors of C that have a sum of B are -4 and -25.</string>
    <string name="t4_example_question01_txt13">Step 3: Use the factors to factor out the quadratic expression:</string>
    <string name="t4_example_question01_txt14">(x – 4)(x – 25) = 0</string>
    <string name="t4_example_question01_txt15">Step 4: Now make each factor equal to zero and solve for x on each:</string>
    <string name="t4_example_question01_txt16">x – 4 = 0 and x – 25 = 0 </string>
    <string name="t4_example_question01_txt17">x – 4 + 4 = 0 + 4 and x – 25 + 25 = 0 + 25</string>
    <string name="t4_example_question01_txt18">x = 4 and x = 25</string>
    <string name="t4_example_question03_txt1">Step 1: Find the values of a, b, c in 4x\u00B2 + 6x + 2:</string>
    <string name="t4_example_question03_txt2">4x\u00B2 + 6x + 2</string>
    <string name="t4_example_question03_txt3">A = 4, B = 6, C = 2</string>
    <string name="t4_example_question03_txt4">Step 2: Since A > 1, Multiply A and C and let’s assign that value to a new variable called D:</string>
    <string name="t4_example_question03_txt5">4 ⋅ 2 = 8</string>
    <string name="t4_example_question03_txt6">D = 8</string>
    <string name="t4_example_question03_txt7">Step 3: Find the factors of D that have a sum that equals to B:</string>
    <string name="t4_example_question03_txt8">-1 + -8 = -9</string>
    <string name="t4_example_question03_txt9">-9 is not equal to 6</string>
    <string name="t4_example_question03_txt10">1 + 8 = 9</string>
    <string name="t4_example_question03_txt11">9 is not equal to 6</string>
    <string name="t4_example_question03_txt12">-2 + -4 = -6</string>
    <string name="t4_example_question03_txt13">-6 is not equal to 6</string>
    <string name="t4_example_question03_txt14">2 + 4 = 6</string>
    <string name="t4_example_question03_txt15">6 is equal to 6</string>
    <string name="t4_example_question03_txt16">So, the factors of D that have a sum of B are 2 and 4.</string>
    <string name="t4_example_question03_txt17">Step 4: Rewrite the original expression and factor out B with 2 and 4:</string>
    <string name="t4_example_question03_txt18">4x\u00B2 + 6x + 2</string>
    <string name="t4_example_question03_txt19">4x\u00B2 + 4x + 2x + 2</string>
    <string name="t4_example_question03_txt20">Step 5: Factor out the GCF from each pair 4x from 4x\u00B2 + 4x and 2 from 2x + 2:</string>
    <string name="t4_example_question03_txt21">4x(x + 1) + 2(x + 1)</string>
    <string name="t4_example_question03_txt22">Step 6: Since both 4x and 2 are multiplying (x + 1) you can group them together:</string>
    <string name="t4_example_question03_txt23">(4x +2)(x + 1)</string>
    <string name="t4_example_question03_txt24">Step 7: Now make each factor equal to zero and solve for x on each:</string>
    <string name="t4_example_question03_txt25">4x + 2 = 0 and x + 1 = 0</string>
    <string name="t4_example_question03_txt26">4x + 2 – 2 = 0 – 2 and x + 1 – 1 = 0 – 1 </string>
    <string name="t4_example_question03_txt27">4x = -2 and x = -1</string>
    <string name="t4_example_question03_txt28">4x/4 = -2/4 and x = -1</string>
    <string name="t4_example_question03_txt29">x = -1/2 and x = -1</string>
</resources>