<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                style="@style/example_txtView_step"
                tools:text="@string/t4_example_question03_txt1" />

            <TextView
                android:id="@+id/textView2"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt2" />

            <TextView
                android:id="@+id/textView3"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt3" />

            <TextView
                android:id="@+id/textView4"
                style="@style/example_txtView_step"
                tools:text="@string/t4_example_question03_txt4" />

            <TextView
                android:id="@+id/textView5"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt5" />

            <TextView
                android:id="@+id/textView6"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt6" />

            <TextView
                android:id="@+id/textView7"
                style="@style/example_txtView_step"
                tools:text="@string/t4_example_question03_txt7" />

            <TextView
                android:id="@+id/textView8"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt8" />

            <TextView
                android:id="@+id/textView9"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt9" />

            <TextView
                android:id="@+id/textView10"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt10" />

            <TextView
                android:id="@+id/textView11"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt11" />

            <TextView
                android:id="@+id/textView12"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt12" />

            <TextView
                android:id="@+id/textView13"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt13" />

            <TextView
                android:id="@+id/textView14"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt14" />

            <TextView
                android:id="@+id/textView15"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt15" />

            <TextView
                android:id="@+id/textView16"
                style="@style/example_txtView_inner_text"
                tools:text="@string/t4_example_question03_txt16" />

            <TextView
                android:id="@+id/textView17"
                style="@style/example_txtView_step"
                tools:text="@string/t4_example_question03_txt17" />

            <TextView
                android:id="@+id/textView18"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt18" />

            <TextView
                android:id="@+id/textView19"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt19" />

            <TextView
                android:id="@+id/textView20"
                style="@style/example_txtView_step"
                tools:text="@string/t4_example_question03_txt20" />

            <TextView
                android:id="@+id/textView21"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt21" />

            <TextView
                android:id="@+id/textView22"
                style="@style/example_txtView_step"
                tools:text="@string/t4_example_question03_txt22" />

            <TextView
                android:id="@+id/textView23"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt23" />

            <TextView
                android:id="@+id/textView24"
                style="@style/example_txtView_step"
                tools:text="@string/t4_example_question03_txt24" />

            <TextView
                android:id="@+id/textView25"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt25" />

            <TextView
                android:id="@+id/textView26"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt26" />

            <TextView
                android:id="@+id/textView27"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt27" />

            <TextView
                android:id="@+id/textView28"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt28" />

            <TextView
                android:id="@+id/textView29"
                style="@style/example_txtView_center"
                tools:text="@string/t4_example_question03_txt29" />

        </LinearLayout>
    </ScrollView>
</layout>