<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                style="@style/example_txtView_step"
                tools:text="@string/t3_example_question03_txt1" />

            <TextView
                android:id="@+id/textView2"
                style="@style/example_txtView_center"
                tools:text="@string/t3_example_question03_txt2" />

            <TextView
                android:id="@+id/textView3"
                style="@style/example_txtView_center"
                tools:text="@string/t3_example_question03_txt3" />

            <TextView
                android:id="@+id/textView4"
                style="@style/example_txtView_step"
                tools:text="@string/t3_example_question03_txt4" />

            <TextView
                android:id="@+id/textView5"
                style="@style/example_txtView_center"
                tools:text="@string/t3_example_question03_txt5" />

            <TextView
                android:id="@+id/textView6"
                style="@style/example_txtView_center"
                tools:text="@string/t3_example_question03_txt6" />

            <TextView
                android:id="@+id/textView7"
                style="@style/example_txtView_step"
                tools:text="@string/t3_example_question03_txt7" />

            <TextView
                android:id="@+id/textView8"
                style="@style/example_txtView_center"
                tools:text="@string/t3_example_question03_txt8" />

            <TextView
                android:id="@+id/textView9"
                style="@style/example_txtView_center"
                tools:text="@string/t3_example_question03_txt9" />

            <TextView
                android:id="@+id/textView10"
                style="@style/example_txtView_step"
                tools:text="@string/t3_example_question03_txt10" />

            <TextView
                android:id="@+id/textView11"
                style="@style/example_txtView_center"
                tools:text="@string/t3_example_question03_txt11" />

        </LinearLayout>
    </ScrollView>
</layout>