<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                style="@style/example_txtView_step"
                tools:text="@string/t1_example_question06_txt1" />

            <TextView
                android:id="@+id/textView2"
                style="@style/example_txtView_center"
                tools:text="@string/t1_example_question06_txt2" />

            <TextView
                android:id="@+id/textView3"
                style="@style/example_txtView_step"
                tools:text="@string/t1_example_question06_txt3" />

            <TextView
                android:id="@+id/textView4"
                style="@style/example_txtView_center"
                tools:text="@string/t1_example_question06_txt4" />

            <TextView
                android:id="@+id/textView5"
                style="@style/example_txtView_center"
                tools:text="@string/t1_example_question06_txt5" />

            <TextView
                android:id="@+id/textView6"
                style="@style/example_txtView_center"
                tools:text="@string/t1_example_question06_txt6" />

            <TextView
                android:id="@+id/textView7"
                style="@style/example_txtView_center"
                tools:text="@string/t1_example_question06_txt7" />

            <TextView
                android:id="@+id/textView8"
                style="@style/example_txtView_center"
                tools:text="@string/t1_example_question06_txt8" />

            <TextView
                android:id="@+id/textView9"
                style="@style/example_txtView_center"
                tools:text="@string/t1_example_question06_txt9" />

        </LinearLayout>
    </ScrollView>
</layout>